# abcs

./: CLAUDE.md  README.md  pyproject.toml
ci/: format_and_check.sh
docs/: algorithm_explanation.md  api_reference.md
examples/: advanced_usage_example.py  basic_usage.py  unbounded_mode_example.py
src/abcs/: __init__.py  better_abcs.py  joint_sampler.py  sampler.py
src/abcs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/acs/: __init__.py  joint_sampler.py  sampler.py  types.py
tests/: test_coverage.py  test_joint_sampler_coverage.py  test_single_axis_sampler.py  utils.py  visualization_utils.py  visualization_utils_v2.py
