[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abcs"
version = "0.1.0"
description = "Adaptive Binary Coverage Search for efficient monotonic curve sampling"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["sampling", "optimization", "binary-search", "coverage", "monotonic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "ruff>=0.1.0",
    "pytype>=2023.04.11",
]
examples = [
    "matplotlib>=3.5.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/abcs"
"Bug Tracker" = "https://github.com/yourusername/abcs/issues"
"Documentation" = "https://github.com/yourusername/abcs/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.pytype]
python_version = "3.8"
inputs = ["src/abcs"]
exclude = ["src/abcs/__pycache__"]